<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:textSize="16dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/enter_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_date"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:textSize="16dp"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/enter_charge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name" />

    <EditText
        android:id="@+id/enter_charge"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/enter_charge"
        android:textSize="16dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/enter_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_date" />

    <EditText
        android:id="@+id/enter_comment"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/enter_comment"
        android:textSize="16dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_charge" />

    <Button
        android:id="@+id/save"
        android:layout_width="116dp"
        android:layout_height="76dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:text="@string/save_button"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>