<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.subbook.MainActivity">


    <Button
        android:id="@+id/newActivity"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_button"
        android:textSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/mySubscriptionList_done" />

    <Button
        android:id="@+id/delete"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="27dp"
        android:text="@string/delete_button"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/mySubscriptionList_done" />

    <Button
        android:id="@+id/clear"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySubscriptionList_done" />

    <ListView
        android:id="@+id/mySubscriptionList_done"
        android:layout_width="fill_parent"
        android:layout_height="415dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:textSize="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_comment" />

    <Button
        android:id="@+id/view"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="27dp"
        android:text="@string/view_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newActivity"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/mySubscriptionList_done" />
</android.support.constraint.ConstraintLayout>
